Work on new array editor