@@ -40,6 +40,18 @@ dependencies {
     implementation group: 'com.panemu', name: 'tiwulfx-dock', version: '0.1'
 }
 
+run {
+    jvmArgs = [
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior.TableViewBehavior=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.event.EventHandlerManager=ALL-UNNAMED",
+            "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED"
+    ]
+}
+
 distributions {
     main {
         contents {
